Fix name spelling and update contact email

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Shubhanker Mehlawat — Front-End Developer</title>
-    <meta name="description" content="Shubhanker Mehlawat — Front-End Developer focused on building clean, responsive web interfaces." />
+    <title>Shubhanker Mhelawat | Front-End Developer</title>
+    <meta name="description" content="Front-End developer focused on UI/UX, responsive design, and modern web interfaces." />
+    <meta name="author" content="Shubhanker Mhelawat" />
+
+    <!-- Open Graph (for LinkedIn / social previews) -->
+    <meta property="og:title" content="Shubhanker Mhelawat | Front-End Developer" />
+    <meta property="og:description" content="Front-End developer focused on UI/UX, responsive design, and modern web interfaces." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ishubhsaga.github.io/my-portfolio/" />
+    <meta property="og:image" content="https://ishubhsaga.github.io/my-portfolio/assets/images/profile.svg" />
+    <meta property="og:site_name" content="Shubhanker Mhelawat" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
@@ -39,9 +48,9 @@
             <div class="container hero-inner">
                 <div class="hero-content">
                     <p class="eyebrow">HELLO, I’M</p>
-                    <h1 class="hero-title">Shubhanker Mehlawat</h1>
+                    <h1 class="hero-title">Shubhanker Mhelawat</h1>
                     <p class="hero-role">Front-End Developer <span class="muted">|</span> <span class="accent">MERN Stack Learner</span></p>
-                    <p class="hero-line">Front-End Developer focused on building clean, responsive web interfaces with modern UI/UX principles.</p>
+                    <p class="hero-line">Front-End Developer focused on building clean, responsive, user-first web experiences.</p>
 
                     <div class="hero-ctas">
                         <a class="btn btn--primary" href="#timeline">View My Journey</a>
@@ -50,7 +59,7 @@
                 </div>
 
                 <div class="hero-media">
-                    <img src="assets/images/profile.svg" alt="Profile — Shubhanker Mehlawat" class="profile-img">
+                    <img src="assets/images/profile.svg" alt="Profile — Shubhanker Mhelawat" class="profile-img">
                 </div>
             </div>
         </section>
@@ -207,7 +216,7 @@
             <div class="container contact-inner">
                 <h2 class="section-title">Let’s work together</h2>
                 <p class="muted">I'm open to opportunities and collaborations — feel free to reach out by email.</p>
-                <a class="btn btn--primary" href="mailto:shubh.mehlawat8@gmail.com">Email Me</a>
+                <a class="btn btn--primary" href="mailto:shubh.mhelawat8@gmail.com">Email Me</a>
             </div>
         </section>
 
@@ -215,7 +224,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p class="muted">© 2026 Shubhanker Mehlawat</p>
+            <p class="muted">© 2026 Shubhanker Mhelawat</p>
         </div>
     </footer>
 
