--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+            <div class="header-social" aria-hidden="false">
+                <a href="https://github.com/ishubhsaga" aria-label="GitHub" target="_blank" rel="noopener">
+                    <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
+                        <path d="M12 .5C5.73.5.5 5.74.5 12.02c0 5.12 3.29 9.46 7.86 10.99.57.1.78-.25.78-.55 0-.27-.01-1.16-.02-2.1-3.2.69-3.88-1.54-3.88-1.54-.52-1.32-1.28-1.67-1.28-1.67-1.05-.72.08-.71.08-.71 1.16.08 1.77 1.19 1.77 1.19 1.03 1.76 2.71 1.25 3.37.96.11-.75.4-1.25.73-1.54-2.55-.29-5.23-1.28-5.23-5.69 0-1.26.45-2.29 1.19-3.1-.12-.29-.52-1.47.11-3.06 0 0 .97-.31 3.18 1.18a11.07 11.07 0 0 1 2.9-.39c.98 0 1.97.13 2.9.39 2.2-1.5 3.18-1.18 3.18-1.18.63 1.59.23 2.77.11 3.06.74.81 1.19 1.84 1.19 3.1 0 4.42-2.69 5.39-5.25 5.68.41.35.78 1.04.78 2.1 0 1.52-.02 2.75-.02 3.12 0 .3.2.66.79.55C20.71 21.47 24 17.13 24 12.02 24 5.74 18.27.5 12 .5z" />
+                    </svg>
+                </a>
+                <a href="https://linkedin.com/in/shubhankar-meh/" aria-label="LinkedIn" target="_blank" rel="noopener">
+                    <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
+                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.026-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.941v5.665H9.349V9h3.414v1.561h.049c.477-.9 1.637-1.852 3.37-1.852 3.602 0 4.267 2.37 4.267 5.456v6.287zM5.337 7.433a2.065 2.065 0 1 1 0-4.13 2.065 2.065 0 0 1 0 4.13zM6.884 20.452H3.789V9h3.095v11.452z" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </header>
 
